--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "google-map-react": "^0.34.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
